--- a/ToDoList/ToDoList.Server/appsettings.Development.json
+++ b/ToDoList/ToDoList.Server/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=DESKTOP-40PGLKA;Database=ToDoListWithAdoNet;User Id=sa;Password=1;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
+
+
+
 }
